syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "CompileInProgress";

package org.samak.banana.dto;

message ClawMachine {
  string id = 1; // UUID format
  string name = 2;
  int32 order = 3;
}

message ClawMachineIdentifier {
  string id = 1;
}

message ClawMachineIdentifiers {
  repeated string ids = 1;
}